--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
                 <div class="row member-list">
                     <div class="col col-3 s-col-full mt-32 text-center">
                         <p class="member-name">Name</p>
-                        <img src="https://www.w3schools.com/w3images/bandmember.jpg" alt="Name" class="member-img">
+                        <img src="img/bandmember.jpg" alt="Name" class="member-img">
                     </div>
 
                     <div class="col col-3 s-col-full mt-32 text-center">
                         <p class="member-name">Name</p>
-                        <img src="https://www.w3schools.com/w3images/bandmember.jpg" alt="Name" class="member-img">
+                        <img src="img/bandmember.jpg" alt="Name" class="member-img">
                     </div>
 
                     <div class="col col-3 s-col-full mt-32 text-center">
                         <p class="member-name">Name</p>
-                        <img src="https://www.w3schools.com/w3images/bandmember.jpg" alt="Name" class="member-img">
+                        <img src="img/bandmember.jpg" alt="Name" class="member-img">
                     </div>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                     <!-- Place list -->
                     <div class="row place-list">
                         <div class="col col-3 s-col-full mt-16">
-                            <img src="https://www.w3schools.com/w3images/newyork.jpg" alt="New York" class="place-img">
+                            <img src="img/newyork.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
@@ -118,7 +118,7 @@
                         </div>
 
                         <div class="col col-3 s-col-full mt-16">
-                            <img src="https://www.w3schools.com/w3images/paris.jpg" alt="Paris" class="place-img">
+                            <img src="img/paris.jpg" alt="Paris" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Paris</h3>
                                 <p class="place-time">Sat 28 Nov 2016</p>
@@ -128,7 +128,7 @@
                         </div>
 
                         <div class="col col-3 s-col-full mt-16">
-                            <img src="https://www.w3schools.com/w3images/sanfran.jpg" alt="San Francisco" class="place-img">
+                            <img src="img/sanfran.jpg" alt="San Francisco" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">San Francisco</h3>
                                 <p class="place-time">Sun 29 Nov 2016</p>
@@ -175,7 +175,7 @@
 
             <!-- Map Section -->
             <div class="map-section">
-                <img src="https://www.w3schools.com/w3images/map.jpg" alt="map">
+                <img src="img/map.jpg" alt="map">
             </div>
         </div>
 
